--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
 --panel:#0b0b1a;
 }
 
-*{
-box-sizing:border-box;
-}
+*{box-sizing:border-box}
 
 body{
 margin:0;
@@ -64,6 +62,31 @@ border:1px solid #222;
 display:flex;
 flex-direction:column;
 overflow:hidden;
+}
+
+/* API BAR */
+#apiBar{
+display:flex;
+gap:10px;
+padding:10px;
+background:#111;
+border-bottom:1px solid #222;
+}
+
+#apiKeyInput{
+flex:1;
+padding:10px;
+background:#000;
+border:1px solid #333;
+color:white;
+}
+
+#apiBar button{
+background:var(--neon-green);
+border:none;
+padding:10px 15px;
+cursor:pointer;
+font-weight:bold;
 }
 
 /* MESSAGE AREA */
@@ -145,6 +168,12 @@ color:#aaa;
 
 <div id="chatContainer">
 
+<!-- API KEY BAR -->
+<div id="apiBar">
+<input type="password" id="apiKeyInput" placeholder="Enter OpenAI API Key (sk-...)">
+<button onclick="saveApiKey()">Save Key</button>
+</div>
+
 <div id="messages"></div>
 
 <div id="inputArea">
@@ -162,51 +191,59 @@ color:#aaa;
 <script>
 
 /* ===========================
-   🔐 INSERT YOUR NEW KEY
+   API KEY HANDLING
 =========================== */
 
-const OPENAI_API_KEY = "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";
+let OPENAI_API_KEY = localStorage.getItem("openai_key") || "";
 
-/* =========================== */
+function saveApiKey(){
+const key = document.getElementById("apiKeyInput").value.trim();
+
+if(!key.startsWith("sk-")){
+alert("Invalid API key.");
+return;
+}
+
+OPENAI_API_KEY = key;
+localStorage.setItem("openai_key", key);
+alert("API Key Saved Successfully!");
+}
+
+/* ===========================
+   CHAT SYSTEM
+=========================== */
 
 const messagesDiv = document.getElementById("messages");
 const input = document.getElementById("userInput");
 const sendBtn = document.getElementById("sendBtn");
-const fileInput = document.getElementById("fileInput");
-const fileStatus = document.getElementById("fileStatus");
 
-let uploadedFiles = [];
-let uploadLockTime = null;
-
-/* ===========================
-   MESSAGE FUNCTIONS
-=========================== */
-
-function addMessage(text, type){
-const div = document.createElement("div");
-div.className = "message " + type;
-div.textContent = text;
+function addMessage(text,type){
+const div=document.createElement("div");
+div.className="message "+type;
+div.textContent=text;
 messagesDiv.appendChild(div);
-messagesDiv.scrollTop = messagesDiv.scrollHeight;
+messagesDiv.scrollTop=messagesDiv.scrollHeight;
 }
 
-/* ===========================
-   SEND MESSAGE
-=========================== */
-
 async function sendMessage(){
-const text = input.value.trim();
-if(!text) return;
+
+if(!OPENAI_API_KEY){
+alert("Please enter API key first.");
+return;
+}
+
+const text=input.value.trim();
+if(!text)return;
 
 addMessage(text,"user");
 input.value="";
 
 try{
-const response = await fetch("https://api.openai.com/v1/chat/completions",{
+const response=await fetch("https://api.openai.com/v1/chat/completions",{
 method:"POST",
 headers:{
 "Content-Type":"application/json",
-"Authorization":"Bearer " + OPENAI_API_KEY
+"Authorization":"Bearer "+OPENAI_API_KEY
 },
 body:JSON.stringify({
 model:"gpt-4o-mini",
@@ -217,10 +254,10 @@ messages:[
 })
 });
 
-const data = await response.json();
+const data=await response.json();
 
 if(data.error){
-addMessage("API Error: " + data.error.message,"bot");
+addMessage("API Error: "+data.error.message,"bot");
 return;
 }
 
@@ -231,52 +268,57 @@ addMessage("Connection Error","bot");
 }
 }
 
-sendBtn.onclick = sendMessage;
-
+sendBtn.onclick=sendMessage;
 input.addEventListener("keydown",e=>{
-if(e.key==="Enter") sendMessage();
+if(e.key==="Enter")sendMessage();
 });
 
 /* ===========================
-   FILE UPLOAD LOGIC
+   FILE UPLOAD LIMIT SYSTEM
 =========================== */
+
+const fileInput=document.getElementById("fileInput");
+const fileStatus=document.getElementById("fileStatus");
+
+let uploadedFiles=[];
+let uploadLockTime=localStorage.getItem("upload_lock") || null;
+
+if(uploadLockTime && Date.now()>uploadLockTime){
+localStorage.removeItem("upload_lock");
+uploadLockTime=null;
+}
 
 fileInput.addEventListener("change",function(){
 
-const now = Date.now();
-
-/* Check lock */
-if(uploadLockTime && now < uploadLockTime){
-alert("Upload limit reached. Try again later.");
+if(uploadLockTime && Date.now()<uploadLockTime){
+alert("Upload locked. Try again after 1 hour.");
 fileInput.value="";
 return;
 }
 
-/* Add files */
 for(let file of fileInput.files){
-if(uploadedFiles.length >= 10){
-uploadLockTime = Date.now() + (60 * 60 * 1000); // 1 hour
-alert("10 files uploaded. Upload locked for 1 hour.");
+
+if(uploadedFiles.length>=10){
+uploadLockTime=Date.now()+(60*60*1000);
+localStorage.setItem("upload_lock",uploadLockTime);
+alert("10 files uploaded. Locked for 1 hour.");
 break;
 }
+
 uploadedFiles.push(file);
 }
 
-/* Update status */
-fileStatus.textContent = uploadedFiles.length + " / 10 files uploaded";
-
+fileStatus.textContent=uploadedFiles.length+" / 10 files uploaded";
 fileInput.value="";
 });
 
-/* ===========================
-   TIMER CHECK (OPTIONAL)
-=========================== */
-
+/* AUTO RESET CHECK */
 setInterval(()=>{
-if(uploadLockTime && Date.now() > uploadLockTime){
-uploadLockTime = null;
-uploadedFiles = [];
-fileStatus.textContent = "0 / 10 files uploaded";
+if(uploadLockTime && Date.now()>uploadLockTime){
+uploadLockTime=null;
+uploadedFiles=[];
+localStorage.removeItem("upload_lock");
+fileStatus.textContent="0 / 10 files uploaded";
 }
 },10000);
 
